--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
+    "nodemailer": "^6.6.1",
     "randomstring": "^1.2.1"
   },
   "devDependencies": {
